# wsn_taller2_ros

./: README.md
Clase_3_Redes_Contenedores/: README.md
Clase_3_Redes_Contenedores/Reto/: Dockerfile
Clase_3_Redes_Contenedores/Reto/sensor_program/: package.xml
Clase_3_Redes_Contenedores/Reto/sensor_program/sensor_program/: __init__.py  plotter_node.py  sensor_node.py
Clase_3_Redes_Contenedores/pcaps/: wsn_20251013_093808.pcap
Taller_2_INTRO_ROS/Reto/: Dockerfile  README.md
Taller_2_INTRO_ROS/Reto/sensor_program/: setup.py
Taller_2_INTRO_ROS/Reto/sensor_program/sensor_program/: reader_node.py
